# MyInves

./: README.md
backend/: .env.example  Dockerfile  README.md  pyproject.toml  yoyo.ini
backend/migrations/: 0001_initial_schema.sql  0002_exchange_table.sql  0003_asset_price.sql  0004_asset_logo.sql  0005_history_tables.sql
backend/src/: di.py  main.py
backend/src/config/: app_config.py
backend/src/db/: db.py
backend/src/db/models/: asset.py  enums.py  exchange.py  reading.py
backend/src/routers/: router.py
backend/src/services/: portfolio_repository.py  portfolio_service.py  queries.py
frontend/: .env.development  Dockerfile  README.md  index.html  package-lock.json  package.json
frontend/public/: manifest.json
frontend/src/: App.vue
frontend/src/components/: AddReadingModal.vue  AppHeader.vue  AssetAllocation.vue  AssetComparison.vue  AssetList.vue  BalanceHero.vue  MarketTicker.vue  TotalChart.vue
frontend/src/services/: api.js
